syntax = "proto3";
package orenshva.cosmoslottery.cosmoslottery;

option go_package = "github.com/orenshva/CosmosLottery/x/cosmoslottery/types";

message FeeCounter {
  uint64 count = 1; 
  
}
