syntax = "proto3";
package orenshva.cosmoslottery.cosmoslottery;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/orenshva/CosmosLottery/x/cosmoslottery/types";

// Msg defines the Msg service.
service Msg {
      rpc EnterLottery(MsgEnterLottery) returns (MsgEnterLotteryResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgEnterLottery {
  string creator = 1;
  uint64 lotteryFee = 2;
  uint64 bet = 3;
}

message MsgEnterLotteryResponse {
}

// this line is used by starport scaffolding # proto/tx/message
